--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.edpichler.cpf</groupId>
     <artifactId>cpf-utils</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
 
 </project>
